--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
