--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
@@ -15,7 +16,7 @@
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
-    "production": [ 
+    "production": [
       ">0.2%",
       "not dead",
       "not op_mini all"
